# glance

./: .env.example  .gitignore  LICENSE  Makefile  README.md  build.bat  conftest.py  glance.spec  installer.iss  pyproject.toml
.github/workflows/: release.yml
docs/: AGENT_PLAN.md  BASE_ARCHITECTURE.md  BUILDING.md  BUILD_PLAN.md  CLI.md  SCOPE.md  USAGE.md  WINDOWS_BUILD_CHECKLIST.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BentoGrid.tsx  BrainSpecs.tsx  Footer.tsx  Hero.tsx  Nav.tsx  TrustLayer.tsx
glance/: __init__.py  cli.py  companion.py  config.py
glance/agent/: __init__.py  actuation.py  computer_loop.py  fileops.py  journal.py  narrator.py  planner.py  sdk_tools.py  session.py
glance/platform/: __init__.py  _linux.py  _windows.py
glance/providers/: __init__.py  base.py  factory.py  heuristic.py  ollama.py
glance/shell/: .env.example  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  SOUL.md  TESTING.md  VENDORED.md  actions.py  build.bat  companion_manager.py  config.py  glance.spec  google_workspace.py  hotkey.py  installer.iss  main.py  memory_store.py  requirements.txt  routing.py  session_log.py  tour.py  tutor.py
organizer/: undo.py
packaging/: clacky_app.py  generate_icons.py
packaging/linux/: build-linux.sh  glance-linux.spec  glance.desktop  glance.metainfo.xml  rthook_expat.py
skills/: organize-desktop.md  organize_desktop.py
tests/: test_computer_loop.py  test_glance_core.py  test_narrator.py  test_permission.py
(+67 files in other folders)
