[project]
name = "glance"
version = "0.1.0"
description = "Open-source AI desktop companion — sees your screen, points at things, and acts on them. Windows + Linux."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
google = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]
dev = ["pytest>=8.0"]
# The companion shell (vendored under glance/shell/). Core deps to launch
# voice + screen + pointing. Premium/optional extras (elevenlabs, tavily,
# pypdf, pytesseract, …) are listed in glance/shell/requirements.txt.
shell = [
    "PyQt6>=6.6.0",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "av>=12.0.0",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.10",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.3.0",
    "pynput>=1.7.7",
    "uiautomation>=2.0.18; sys_platform == 'win32'",
    "pyatspi>=0.4; sys_platform == 'linux'",
]

[project.scripts]
glance = "glance.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glance", "glance.agent", "glance.providers", "glance.platform"]
